2002-05-21  Andrew H. Chatham <andrew.chatham@duke.edu>
	* pyvorbisinfo.c: Don't crash if comments are not valid UTF-8

	* vorbismodule.c: Include some more headers
	
2002-02-17  Andrew H. Chatham <andrew.chatham@duke.edu>
	* pyvorbisfile.c: (py_ov_open): Fixed fd leak pointed out by
	Harald Meland. Also correctly incref file objects passed in to
	keep them open.

	* vorbismodule.c, pyvorbisfile.c, pyvorbiscodec.c, pyvorbisinfo.c:
	Set the ob_types in the init method instead of statically, as 
	MSVC complains.

2002-01-27  Andrew H. Chatham <andrew.chatham@duke.edu>
	* pyvorbisinfo.c (del_comment): Set parent to NULL after decref
	
2002-01-27  Andrew H. Chatham <andrew.chatham@duke.edu>
	* test/comment.py: Added
	* pyvorbisinfo.c (del_comment), (find_tag_insensitive): Added. 
		You can now delete comments.
	* README: Explain how to delete comments
	
2002-01-27  Andrew H. Chatham <andrew.chatham@duke.edu>
	* bump to version 0.5

2002-01-27  Andrew H. Chatham <andrew.chatham@duke.edu>
	* pyvorbiscodec.c (py_dsp_write_wav), (parse_wav_data): Added
	* pyvorbiscodec.c (py_dsp_write): Write 0 if None
	
	* pyvorbisinfo.c: Removed some unused variables
	* pyvorbisinfo.c (py_info_new): Parse the quality option
	* pyvorbisinfo.c (py_vorbis_info_blocksize): Added

	* test/enc.py: Updated to do new encode process (with quality setting)
	* test/enc2.py: Updated to do quality setting and use write_wav

2002-01-21  Andrew H. Chatham <andrew.chatham@duke.edu>
	* pyvorbisinfo.c: Comment objects now store pointers to the
	comment structures, not the structure itself. Helps with dealloc.
	* pyvorbisinfo.c (write_comments), (py_comment_append_to),
	(py_comment_write_to): Added
	* pyvorbisinfo.c (py_comment_assign): Catch del on a comment
	object. Returns not implemented exception for now
	* README: Explain how to use comments
	* vcedit.h Copied in from vorbiscomment
	* vcedit.c: Copied in from vorbiscomment
	
2001-12-09  Andrew H. Chatham <andrew.chatham@duke.edu>