@@ -55,7 +55,8 @@ vorbismodule = Extension(name='vorbismodule',
                                   'src/pyvorbisinfo.c',
                                   'src/vcedit.c',
                                   'src/general.c'],
-                         define_macros = [('VERSION', '"%s"' % pyvorbis_version)],
+                         define_macros = [('VERSION', '"%s"' %
+                                           pyvorbis_version)],
                          include_dirs=[vorbis_include_dir,
                                        ogg_include_dir],
                          library_dirs=[vorbis_lib_dir,
